# nitty

./: .env.example  .gitignore  README.md  alembic.ini  docker-compose.dev.yml  main.py  pyproject.toml
alembic/: env.py
alembic/versions/: 21942faf636f_added_events_tables.py  2a448658c994_added_communities_table.py  ef8b0934e73c_added_users_table.py
app/: config.py  database.py  deps.py  main.py
app/auth/: models.py  router.py  service.py
app/communities/: models.py  router.py  service.py
app/events/: models.py  router.py  service.py
app/tests/: conftest.py  test_user.py  utils.py
docs/: API.md  DEPLOYMENT.md  DEVELOPMENT.md  FAQ.md  QUICKSTART.md
scripts/: tests-start.sh
